--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Juego-DV-Arreglado.sln"
+    "dotnet.defaultSolution": "Juego-DV-main.sln"
 }
